--- a/.github/workflows/tryhackme-badge-workflow.yml
+++ b/.github/workflows/tryhackme-badge-workflow.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: jer1cho23/tryhackme-badge-workflow@main
         with:
           # Replace with your tryhackme username
-          username: "<Jer1cho>"
+          username: "Jer1cho"
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
